# coral-screenshot

./: .gitignore  Cargo.toml
src/: fb.rs  lib.rs  main.rs  screenshot.rs  traits.rs  xlib.rs
